--- a/quiz_game_page.html
+++ b/quiz_game_page.html
@@ -24,24 +24,19 @@
 		<h3 id="player_answer"></h3>
 		<div id="output" class="col-lg-6">
             <span id="question"></span>
-            <br>
-            <br>
-            <span id="answer_bar">Answer: <input id="asnwer" type="number"> </span>
-            <br>
-            <br>
-            <button id="check" class="btn btn-info" onclick="check()">Check</button>
+            
         </div>
 
 <br>
 <div class = "col-lg-4 col-sm-8 col-xs-11 number1_div">
 <h4>Number 1</h4>
-<input type="number" placeholder="Number 1" class="form-control" id="number1_input">
+<input type="number" placeholder="Number 1" class="form-control" id="number1">
 <br>
 </div>
 <br>
 <div class = "col-lg-4 col-sm-8 col-xs-11 number2_div">
 	<h4>Number 2</h4>
-	<input type="number" placeholder="Number 2" class="form-control" id="number2_input">
+	<input type="number" placeholder="Number 2" class="form-control" id="number2">
 	<br>
 	</div>
 	<br>
