--- a/quiz_game_page.html
+++ b/quiz_game_page.html
@@ -8,9 +8,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="mathquiz.css">
 <link rel="stylesheet" type="text/css" href="quiz_game_page.css">
-<script src="quiz_game_page.js"></script>
+<link rel="stylesheet" type="text/css" href="quiz_game_page.css">
+
 </head>
 <body>
     <h4 id="player1_name"></h4><span id="player1_score"></span>
@@ -23,7 +23,6 @@
         <h3 id="player_question"></h3>
 		<h3 id="player_answer"></h3>
 		<div id="output" class="col-lg-6">
-            <span id="question"></span>
             
         </div>
 
@@ -46,6 +45,6 @@
 </div>
 
 
-
+<script src="quiz_game_page.js"></script>
 </body>
 </html>
